[tool.poetry]
name = "mitsugen"
version = "0.1.2"
description = ""
authors = ["dimitriosmilonopoulos@gmail.com"]
readme = "README.md"
packages = [{ include = "mitsugen", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
rich = "*"
pillow = "*"
pygobject = "*"
material = "*"
pydantic = "*"
regex = "*"
numpy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
